ulam2/src/ulam/Parser.cpp
#include <iostream>
#include <sstream>
#include <stdlib.h>
#include <assert.h>
#include "Parser.h"
#include "NodeBinaryOpArithAdd.h"
#include "NodeBinaryOpArithDivide.h"
#include "NodeBinaryOpArithMultiply.h"
#include "NodeBinaryOpArithRemainder.h"
#include "NodeBinaryOpArithSubtract.h"
#include "NodeBinaryOpBitwiseAnd.h"
#include "NodeBinaryOpBitwiseOr.h"
#include "NodeBinaryOpBitwiseXor.h"
#include "NodeBinaryOpCompareEqualEqual.h"
#include "NodeBinaryOpCompareNotEqual.h"
#include "NodeBinaryOpCompareLessThan.h"
#include "NodeBinaryOpCompareGreaterThan.h"
#include "NodeBinaryOpCompareLessEqual.h"
#include "NodeBinaryOpCompareGreaterEqual.h"
#include "NodeBinaryOpEqual.h"
#include "NodeBinaryOpEqualArithAdd.h"
#include "NodeBinaryOpEqualArithMultiply.h"
#include "NodeBinaryOpEqualArithSubtract.h"
#include "NodeBinaryOpEqualBitwiseAnd.h"
#include "NodeBinaryOpEqualBitwiseOr.h"
#include "NodeBinaryOpEqualBitwiseXor.h"
#include "NodeBinaryOpLogicalAnd.h"
#include "NodeBinaryOpLogicalOr.h"
#include "NodeBinaryOpShiftLeft.h"
#include "NodeBinaryOpShiftRight.h"
#include "NodeBlock.h"
#include "NodeBlockEmpty.h"
#include "NodeBlockFunctionDefinition.h"
#include "NodeBreakStatement.h"
#include "NodeCast.h"
#include "NodeConditionalAs.h"
#include "NodeConditionalIs.h"
#include "NodeConstant.h"
#include "NodeContinueStatement.h"
#include "NodeControlIf.h"
#include "NodeControlWhile.h"
#include "NodeIdent.h"
#include "NodeInstanceof.h"
#include "NodeLabel.h"
#include "NodeMemberSelect.h"
#include "NodeModelParameter.h"
#include "NodeReturnStatement.h"
#include "NodeAtomof.h"
#include "NodeSquareBracket.h"
#include "NodeSimpleStatement.h"
#include "NodeStatementEmpty.h"
#include "NodeTerminal.h"
#include "NodeTerminalProxy.h"
#include "NodeTypeBitsize.h"
#include "NodeTypedef.h"
#include "NodeTypeDescriptorArray.h"
#include "NodeTypeDescriptorSelect.h"
#include "NodeUnaryOpBang.h"
#include "NodeUnaryOpMinus.h"
#include "NodeUnaryOpPlus.h"
#include "NodeVarDeclDM.h"
#include "NodeVarRef.h"
#include "NodeVarRefAs.h"
#include "SymbolClass.h"
#include "SymbolClassName.h"
#include "SymbolConstantValue.h"
#include "SymbolFunction.h"
#include "SymbolFunctionName.h"
#include "SymbolModelParameterValue.h"
#include "SymbolVariableDataMember.h"
#include "SymbolVariableStack.h"

namespace MFM {

#define QUIETLY true
#define NOASSIGNOK false
#define SINGLEDECL true

  Parser::Parser(Tokenizer * izer, CompilerState & state): m_state(state), m_tokenizer(izer)
  {
    //moved here since parse can be called multiple times
    initPrimitiveUlamTypes();
  }

  Parser::~Parser()
  {}

  //return changed to number of errors
  //change to return Node * rather than vector; change tests
  u32 Parser::parseProgram(std::string startstr, File * errOutput)
  {
    if(errOutput)
      m_state.m_err.setFileOutput(errOutput);

    //add name of the thing we are compiling to string pool (and node program);
    //dropping the .ulam suffix
    u32 compileThisId;
    if(!m_state.getClassNameFromFileName(startstr, compileThisId))
      return 1; //1 error

    //here's the start (first token)!!  preparser will handle the VERSION_DECL,
    //as well as USE and LOAD keywords.
    while(!parseThisClass());

    //here when no more classes, or there was an error
    Symbol * thisClassSymbol = NULL;
    NodeBlockClass * rootNode = NULL;

    if(m_state.m_programDefST.isInTable(compileThisId, thisClassSymbol))
      {
	UTI cuti = thisClassSymbol->getUlamTypeIdx();
	ULAMCLASSTYPE classtype = m_state.getUlamTypeByIndex(cuti)->getUlamClassType();
	if(classtype == UC_UNSEEN)
	  {
	    std::ostringstream msg;
	    msg << "Invalid Type: " << m_state.m_pool.getDataAsString(compileThisId).c_str();
	    MSG(m_state.getFullLocationAsString(thisClassSymbol->getLoc()).c_str(), msg.str().c_str(), ERR);
	  }
	rootNode = ((SymbolClass *) thisClassSymbol)->getClassBlockNode();
      }

    if(!rootNode)
      {
	std::ostringstream msg;
	msg << "No parse tree for This Class: ";
	msg << m_state.m_pool.getDataAsString(compileThisId).c_str();
	MSG("", msg.str().c_str(), ERR);
      }

    u32 warns = m_state.m_err.getWarningCount();
    if(warns > 0)
      {
	std::ostringstream msg;
	msg << warns << " warning" << (warns > 1 ? "s " : " ") << "during parsing: ";
	msg << m_state.m_pool.getDataAsString(compileThisId).c_str();
	MSG((rootNode ? rootNode->getNodeLocationAsString().c_str() : ""), msg.str().c_str(), INFO);
      }

    u32 errs = m_state.m_err.getErrorCount();
    if(errs > 0)
      {
	std::ostringstream msg;
	msg << errs << " TOO MANY PARSE ERRORS: ";
	msg << m_state.m_pool.getDataAsString(compileThisId).c_str();
	MSG((rootNode ? rootNode->getNodeLocationAsString().c_str() : ""), msg.str().c_str(), INFO);
      }
    return (errs);
  } //parseProgram

  bool Parser::parseThisClass()
  {
    Token pTok;
    getNextToken(pTok);

    if(pTok.m_type == TOK_EOF)
      {
        //Nothing else (but haven't found startstr yet)
	MSG(&pTok, "EOF before finding compilation target", DEBUG);
	m_state.clearStructuredCommentToken();
        return true;
      }

    if((pTok.m_type != TOK_KW_ELEMENT) && (pTok.m_type != TOK_KW_QUARK) && (pTok.m_type != TOK_KW_QUARKUNION) && (pTok.m_type != TOK_KW_TRANSIENT))
      {
	std::ostringstream msg;
	msg << "Invalid Class Type <";
	msg << m_state.getTokenDataAsString(&pTok).c_str();
	msg << ">; KEYWORD should be '";
	msg << Token::getTokenAsStringFromPool(TOK_KW_ELEMENT, &m_state).c_str();
	msg << "', '";
	msg << Token::getTokenAsStringFromPool(TOK_KW_QUARK, &m_state).c_str();
	msg << "', '";
	msg << Token::getTokenAsStringFromPool(TOK_KW_QUARKUNION, &m_state).c_str();
	msg << "', or '";
	msg << Token::getTokenAsStringFromPool(TOK_KW_TRANSIENT, &m_state).c_str();
	msg << "'";
	MSG(&pTok, msg.str().c_str(), ERR);
	m_state.clearStructuredCommentToken();
	return true; //we're done.
      }

    //each class has its own parse tree; each "compileThis",
    //in turn, has code generated later.
    Token iTok;
    getNextToken(iTok);

    //insure the class name starts with a capital letter,
    //and is not a primitive (e.g. TOK_TYPE_INT)
    if(iTok.m_type != TOK_TYPE_IDENTIFIER)
      {
	std::ostringstream msg;
	msg << "Poorly named class '" << m_state.getTokenDataAsString(&iTok).c_str();
	msg << "'; Identifier must begin with an upper-case letter";
	MSG(&iTok, msg.str().c_str(), ERR);
	m_state.clearStructuredCommentToken();
	return true; //we're done unless we can gobble the rest up?
      }

    SymbolClassName * cnSym = NULL;
    bool wasIncomplete = false;

    Token qTok;
    getNextToken(qTok);
    unreadToken();
    bool isTemplate = (qTok.m_type == TOK_OPEN_PAREN);

    if(!isTemplate)
      {
	if(!m_state.alreadyDefinedSymbolClassName(iTok.m_dataindex, cnSym))
	  {
	    m_state.addIncompleteClassSymbolToProgramTable(iTok, cnSym);
	  }
	else
	  {
	    //if already defined, then must be incomplete, else duplicate!!
	    if(cnSym->getUlamClass() != UC_UNSEEN)
	      {
		std::ostringstream msg;
		msg << "Duplicate or incomplete class '";
		msg << m_state.m_pool.getDataAsString(cnSym->getId()).c_str() << "'";
		MSG(&iTok, msg.str().c_str(), ERR);
		m_state.clearStructuredCommentToken();
		return  true; //we're done unless we can gobble the rest up?
	      }
	    else if(cnSym->isClassTemplate())
	      {
		std::ostringstream msg;
		msg << "Conflicting class args previously seen for class with no parameters <";
		msg << m_state.m_pool.getDataAsString(cnSym->getId()).c_str() << ">";
		MSG(&iTok, msg.str().c_str(), ERR);
		m_state.clearStructuredCommentToken();
		return  true; //we're done unless we can gobble the rest up?
	      }
	    wasIncomplete = true;
	  }
      }
    else
      {
	SymbolClassNameTemplate * ctSym = NULL;
	if(!m_state.alreadyDefinedSymbolClassNameTemplate(iTok.m_dataindex, ctSym) && ctSym == NULL)
	  {
	    m_state.addIncompleteTemplateClassSymbolToProgramTable(iTok, ctSym);
	  }
	else
	  {
	    //if already defined, then must be incomplete, else duplicate!!
	    if(ctSym && ctSym->getUlamClass() != UC_UNSEEN)
	      {
		std::ostringstream msg;
		msg << "Duplicate or incomplete template class '";
		msg << m_state.m_pool.getDataAsString(ctSym->getId()).c_str() << "'";
		MSG(&iTok, msg.str().c_str(), ERR);
		m_state.clearStructuredCommentToken();
		return true; //we're done unless we can gobble the rest up?
	      }
	    if(ctSym && !ctSym->isClassTemplate())
	      {
		//error already output
		m_state.clearStructuredCommentToken();
		return true; //we're done unless we can gobble the rest up?
	      }
	    wasIncomplete = true;
	  }
	cnSym = ctSym;
      } //template

    UTI cuti = cnSym->getUlamTypeIdx();
    UlamType * cut = m_state.getUlamTypeByIndex(cuti);

    //mostly needed for code gen later, but this is where we first know it!
    m_state.pushClassContext(cuti, cnSym->getClassBlockNode(), cnSym->getClassBlockNode(), false, NULL); //null blocks likely

    //set class type in UlamType (through its class symbol) since we know it;
    //UC_UNSEEN if unseen so far.
    m_state.resetUnseenClass(cnSym, iTok);

    switch(pTok.m_type)
      {
      case TOK_KW_ELEMENT:
	{
	  AssertBool isReplaced = m_state.replaceUlamTypeForUpdatedClassType(cut->getUlamKeyTypeSignature(), Class, UC_ELEMENT, cut->isCustomArray());
	  assert(isReplaced);
	  break;
	}
      case TOK_KW_QUARK:
	{
	  AssertBool isReplaced = m_state.replaceUlamTypeForUpdatedClassType(cut->getUlamKeyTypeSignature(), Class, UC_QUARK, cut->isCustomArray());
	  assert(isReplaced);
	  break;
	}
      case TOK_KW_QUARKUNION:
	{
	  AssertBool isReplaced = m_state.replaceUlamTypeForUpdatedClassType(cut->getUlamKeyTypeSignature(), Class, UC_QUARK, cut->isCustomArray());
	  assert(isReplaced);
	  cnSym->setQuarkUnion();
	  break;
	}
      case TOK_KW_TRANSIENT:
	{
	  AssertBool isReplaced = m_state.replaceUlamTypeForUpdatedClassType(cut->getUlamKeyTypeSignature(), Class, UC_TRANSIENT, cut->isCustomArray());
	  assert(isReplaced);
	  break;
	}
      default:
	assert(0); //checked prior
      };

    cnSym->setStructuredComment(); //also clears

    NodeBlockClass * classNode = parseClassBlock(cnSym, iTok); //we know its type too..sweeter
    if(classNode)
      {
	if(wasIncomplete && isTemplate)
	  ((SymbolClassNameTemplate *) cnSym)->fixAnyClassInstances();
      }
    else
      {
	//reset to incomplete (UC_UNSEEN)
	UTI cuti = cnSym->getUlamTypeIdx();
	UlamType * cut = m_state.getUlamTypeByIndex(cuti);

	AssertBool isReplaced = m_state.replaceUlamTypeForUpdatedClassType(cut->getUlamKeyTypeSignature(), Class, UC_UNSEEN, cut->isCustomArray());
	assert(isReplaced);

	cnSym->setClassBlockNode(NULL);
	std::ostringstream msg;
	msg << "Empty/Incomplete Class Definition '";
	msg << m_state.getTokenDataAsString(&iTok).c_str();
	msg << "'; Possible missing ending curly brace";
	MSG(&pTok, msg.str().c_str(), ERR);
      }

    return false; //keep going until EOF is reached
  } //parseThisClass

  NodeBlockClass * Parser::parseClassBlock(SymbolClassName * cnsym, Token identTok)
  {
    bool inherits = false;
    UTI utype = cnsym->getUlamTypeIdx(); //we know its type..sweeter
    NodeBlockClass * rtnNode = cnsym->getClassBlockNode(); //usually NULL
    if(!rtnNode)
      {
	//this is the class' first block; o.w. null
	NodeBlock * prevBlock = m_state.getCurrentBlock();

	rtnNode = new NodeBlockClass(prevBlock, m_state);
	assert(rtnNode);
	rtnNode->setNodeLocation(identTok.m_locator);
	rtnNode->setNodeType(utype);

	//set block before returning, so future class instances can link back to it
	cnsym->setClassBlockNode(rtnNode);
      }
    else
      {
	//this is the class' first block; o.w. null
	NodeBlock * prevBlock = m_state.getCurrentBlock();
	if(prevBlock != rtnNode)
	  rtnNode->setPreviousBlockPointer(prevBlock);
      }


    //current, this block's symbol table added to parse tree stack
    //        for validating and finding scope of program/block variables
    //class block has 2 ST: functions and data member decls, separate
    //m_state.popClassContext(); //keep on stack for name id
    m_state.pushClassContext(utype, rtnNode, rtnNode, false, NULL);

    //automatically create a Self typedef symbol for this class type
    u32 selfid = m_state.m_pool.getIndexForDataString("Self");
    Token selfTok(TOK_TYPE_IDENTIFIER, identTok.m_locator, selfid);
    SymbolTypedef * symtypedef = new SymbolTypedef(selfTok, utype, utype, m_state); //refselftype
    assert(symtypedef);
    m_state.addSymbolToCurrentScope(symtypedef);

    //need class block's ST before parsing any class parameters (i.e. named constants);
    Token pTok;
    getNextToken(pTok);

    if(pTok.m_type == TOK_OPEN_PAREN)
      parseRestOfClassParameters((SymbolClassNameTemplate *) cnsym, rtnNode);
    else
      unreadToken();

    Token qTok;
    getNextToken(qTok);

    if(qTok.m_type == TOK_COLON)
      {
	SymbolClass * supercsym = NULL;
	UTI superuti = Nouti;
	inherits = parseRestOfClassInheritance(cnsym, supercsym, superuti);
	if(inherits)
	  {
	    assert(supercsym);
	    NodeBlockClass * superclassblock = supercsym->getClassBlockNode();
	    assert(superclassblock);

	    //set super class' block after any parameters parsed;
	    // (separate from previous block which might be pointing to template
	    //  in case of a stub)
	    rtnNode->setSuperBlockPointer(NULL); //wait for c&l

	    //rearrange order of class context so that super class is traversed after subclass
	    m_state.popClassContext(); //m_currentBlock = prevBlock;
	    m_state.pushClassContext(superuti, superclassblock, superclassblock, false, NULL);
	    m_state.pushClassContext(cnsym->getUlamTypeIdx(), rtnNode, rtnNode, false, NULL); //redo

	    //automatically create a Super typedef symbol for this class' super type
	    u32 superid = m_state.m_pool.getIndexForDataString("Super");
	    Symbol * symtypedef = NULL;
	    if(!rtnNode->isIdInScope(superid, symtypedef))
	      {
		Token superTok(TOK_TYPE_IDENTIFIER, qTok.m_locator, superid);
		symtypedef = new SymbolTypedef(superTok, superuti, superuti, m_state);
		assert(symtypedef);
		m_state.addSymbolToCurrentScope(symtypedef);
	      }
	    else //holder may have been made prior
	      {
		assert(symtypedef->getId() == superid);
		UTI stuti = symtypedef->getUlamTypeIdx();
		if(stuti != superuti)
		  m_state.updateUTIAliasForced(stuti, superuti); //t3808, t3806, t3807
	      }
	  }
      }
    else
      {
	unreadToken();
	cnsym->setSuperClass(Nouti); //clear

	//earliest ancestor when none designated; for all classes except UrSelf,
	u32 urid = m_state.m_pool.getIndexForDataString("UrSelf");
	if(cnsym->getId() != urid)
	  {
	    SymbolClassName * ursym = NULL;
	    if(!m_state.alreadyDefinedSymbolClassName(urid, ursym))
	      {
		//required only once!
		Token urTok(TOK_TYPE_IDENTIFIER, qTok.m_locator, urid);
		m_state.addIncompleteClassSymbolToProgramTable(urTok, ursym);
		m_state.saveUrSelf(ursym->getUlamTypeIdx());
	      }
	    cnsym->setSuperClass(ursym->getUlamTypeIdx()); //reset super here!!!
	  }
      }

    if(!getExpectedToken(TOK_OPEN_CURLY, pTok))
      {
	if(pTok.m_type == TOK_COLON)
	  {
	    std::ostringstream msg;
	    msg << "Inheritance for template class identifier '";
	    msg << m_state.getTokenDataAsString(&identTok).c_str();
	    msg << "' unsupported";
	    MSG(&pTok, msg.str().c_str(), ERR);
	  }
	delete rtnNode;
	return NULL;
      }

    if(getExpectedToken(TOK_CLOSE_CURLY))
      {
	rtnNode->setEmpty();
	return rtnNode; //allow empty class
      }

    //keep the data member var decls, starting with NodeBlockClass, keeping it for return
    NodeStatements * nextNode = rtnNode;
    NodeStatements * stmtNode = NULL;

    while(parseDataMember(stmtNode))
      {
	//stmtNode could be false, in case of function def
	if(stmtNode)
	  {
	    nextNode->setNextNode(stmtNode);
	    nextNode = stmtNode;
	    stmtNode = NULL;
	  }
      }

    if(!getExpectedToken(TOK_CLOSE_CURLY))
      {
	delete rtnNode;
	rtnNode = NULL;
      }

    //this block's ST is no longer in scope
    m_state.popClassContext(); //m_currentBlock = prevBlock;

    if(inherits)
      m_state.popClassContext(); //m_currentBlock = prevBlock;

    return rtnNode;
  } //parseClassBlock

  void Parser::parseRestOfClassParameters(SymbolClassNameTemplate * cntsym, NodeBlockClass * cblock)
  {
    assert(cntsym);

    Token pTok;
    getNextToken(pTok);
    if(pTok.m_type == TOK_CLOSE_PAREN)
      {
	if(cntsym->getNumberOfParameters() == 0)
	  {
	    std::ostringstream msg;
	    msg << "Class Template '";
	    msg << m_state.m_pool.getDataAsString(cntsym->getId()).c_str();
	    msg << "' has NO parameters; Parens are inapplicable";
	    MSG(&pTok, msg.str().c_str(), ERR);
	  }
	return; //done with parameters
      }

    //allows class name to be same as parameter name
    //since the class starts a new "block" (i.e. ST);
    //the argument to parseDecl will prevent it from looking
    //for restofdecls
    if(Token::isTokenAType(pTok))
      {
	unreadToken();

	//once a parameter has a default value expression
	// subsequent parameters must also to avoid ambiguity when instaniated
	u32 numparams = cntsym->getNumberOfParameters();
	bool assignrequired = ( (numparams == 0) ? NOASSIGNOK : cntsym->parameterHasDefaultValue(numparams - 1));
	Node * argNode = parseConstdef(assignrequired, false); //2nd arg->not statement
	Symbol * argSym = NULL;

	//could be null symbol already in scope
	if(argNode)
	  {
	    //parameter IS a NodeConstantdef
	    if(argNode->getSymbolPtr(argSym))
	      {
		((SymbolConstantValue *) argSym)->setClassParameterFlag();
		//ownership stays with NodeBlockClass's ST
		cntsym->addParameterSymbol((SymbolConstantValue *) argSym);
	      }
	    else
	      MSG(&pTok, "No symbol from class parameter declaration", ERR);

	    //potentially needed to resolve its node type
	    cblock->addParameterNode(argNode);
	  }
      }
    else
      {
	std::ostringstream msg;
	msg << "Expected a 'Type' Token!! got Token '";
	msg << m_state.getTokenDataAsString(&pTok).c_str();
	msg << "' instead for class parameter declaration";
	MSG(&pTok, msg.str().c_str(), ERR);
	return;
      }

    getExpectedToken(TOK_COMMA); //if so, get next parameter; o.w. unread

    return parseRestOfClassParameters(cntsym, cblock);
  } //parseRestOfClassParameters

  bool Parser::parseRestOfClassInheritance(SymbolClassName * cnsym, SymbolClass *& supercsym, UTI& superuti)
  {
    bool rtninherits = false;
    assert(cnsym);
    //inheritance
    Token iTok;
    getNextToken(iTok);

    if(iTok.m_type == TOK_TYPE_IDENTIFIER)
      {
	bool isaclass = true;
	superuti = parseClassArguments(iTok, isaclass);
	if(superuti != Nav)
	  {
	    cnsym->setSuperClassForClassInstance(superuti, cnsym->getUlamTypeIdx()); //set here!!
	    AssertBool isDefined = m_state.alreadyDefinedSymbolClass(superuti, supercsym);
	    assert(isDefined);
	    rtninherits = true;
	  }
      }
    else
      {
	std::ostringstream msg;
	msg << "Class Definition '";
	msg << m_state.getUlamTypeNameBriefByIndex(cnsym->getUlamTypeIdx()).c_str(); //t3786
	msg << "'; Inheritance from invalid Class identifier '";
	msg << m_state.getTokenDataAsString(&iTok).c_str() << "'";
	MSG(&iTok, msg.str().c_str(), ERR);
      }
    return rtninherits;
  } //parseRestOfClassInheritance

  bool Parser::parseDataMember(NodeStatements *& nextNode)
  {
    bool brtn = false;
    Node * rtnNode = NULL;
    bool isFunc = false;
    Token pTok;
    getNextToken(pTok);

    if(pTok.m_type == TOK_CLOSE_CURLY)
      {
	unreadToken();
	return false; //done!
      }

    if(pTok.m_type == TOK_KW_TYPEDEF)
      {
	//parse Typedef's starting with keyword first
	rtnNode = parseTypedef();
      }
    else if(pTok.m_type == TOK_KW_CONSTDEF)
      {
	//parse Named Constant starting with keyword first
	rtnNode = parseConstdef();
      }
    else if(pTok.m_type == TOK_KW_PARAMETER)
      {
	//static model parameter for elements, not quarks
	rtnNode = parseParameter();
      }
    else //regular data member: function or variable
      {
	bool isVirtual = false;
	if(pTok.m_type == TOK_KW_VIRTUAL)
	  isVirtual = true;
	else
	  unreadToken(); //put back for parsing type descriptor

	TypeArgs typeargs;
	NodeTypeDescriptor * typeNode = parseTypeDescriptor(typeargs, true);

	if(typeNode == NULL)
	  return false; //expecting a type, not sizeof, probably an error!

	Token iTok;
	getNextToken(iTok);
	if(iTok.m_type != TOK_IDENTIFIER)
	  {
	    //user error!
	    if(iTok.m_type == TOK_AMP)
	      {
		std::ostringstream msg;
		msg << "Reference as data member or function return type; Not supported";
		MSG(&iTok, msg.str().c_str(), ERR);
	      }
	    else
	      {
		std::ostringstream msg;
		msg << "Name of variable/function <";
		msg << m_state.getTokenDataAsString(&iTok).c_str();
		if((Token::getSpecialTokenWork(iTok.m_type) == TOKSP_KEYWORD))
		  msg << ">: Identifier must not be a reserved keyword";
		else
		  msg << ">: Identifier must begin with a lower-case letter";
		MSG(&iTok, msg.str().c_str(), ERR);
	      }
	    m_state.clearStructuredCommentToken();
	    delete typeNode;
	    typeNode = NULL;
	    unreadToken();
	    return false; //done!
	  }

	//need next token to distinguish a function from a variable declaration (quietly)
	if(getExpectedToken(TOK_OPEN_PAREN))
	  {
	    isFunc = true;
	    //eats the '(' when found; NULL if error occurred
	    rtnNode = makeFunctionSymbol(typeargs, iTok, typeNode, isVirtual); //with params
	    if(rtnNode)
	      brtn = true; //rtnNode belongs to the symbolFunction
	    else
	    //MSG(&pTok, "INCOMPLETE Function Definition", ERR);
	      m_state.clearStructuredCommentToken();
	  }
	else
	  {
	    if(isVirtual)
	      {
		std::ostringstream msg;
		msg << "Unexpected input!! Token <";
		msg << m_state.getTokenDataAsString(&pTok).c_str() << ">";
		msg << " applies to functions";
		MSG(&pTok, msg.str().c_str(), ERR);
		//continue
	      }

	    //not '(', so token is unread, and we know
	    //it's a variable, not a function; also handles arrays
	    UTI passuti = typeNode->givenUTI(); //before it may become an array
	    rtnNode = makeVariableSymbol(typeargs, iTok, typeNode);

	    if(rtnNode)
	      {
		parseRestOfDataMemberAssignment(typeargs, iTok, rtnNode, passuti);
		rtnNode = parseRestOfDataMember(typeargs, iTok, rtnNode, passuti);
	      }
	    else
	      m_state.clearStructuredCommentToken();
	  }
      } //regular data member
